--- a/src/gflags_declare.h.in
+++ b/src/gflags_declare.h.in
@@ -64,6 +64,12 @@
 #endif
 
 // We always want to import variables declared in user code.
+#ifndef GFLAGS_TESTS
+#    define GFLAGS_TESTS ndef_flags
+#else
+#   define GFLAGS_TESTS def_flags 
+#endif
+
 #ifndef GFLAGS_DLL_DECLARE_FLAG
 #  if GFLAGS_IS_A_DLL && defined(_MSC_VER)
 #    define GFLAGS_DLL_DECLARE_FLAG __declspec(dllimport)
