--- a/src/gflags_declare.h.in
+++ b/src/gflags_declare.h.in
@@ -65,9 +65,9 @@
 
 // We always want to import variables declared in user code.
 #ifndef GFLAGS_TESTS
-#    define GFLAGS_TESTS ndef_flags
+#    define GFLAGS_TESTS "ndef_flags"
 #else
-#   define GFLAGS_TESTS def_flags 
+#   define GFLAGS_TESTS "def_flags" 
 #endif
 
 #ifndef GFLAGS_DLL_DECLARE_FLAG
